<resources>
    <string name="app_name">Centen Pizza</string>
    <string name="order_now">Order Now</string>
    <string name="title_activity_ac_select_pizza">Ac_SelectPizza</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="canadian_pizza">Canadian Pizza</string>
    <string name="chiken_caesar">Chiken Caesar</string>
    <string name="hawaiian_pizza">Hawaiian Pizza</string>
    <string name="smokey_maple_bacon">Smokey Maple Bacon</string>
    <string name="veggie_lover_s">Veggie Lover\'s</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="thin_crust">Thin crust</string>
    <string name="thick_crust">Thick crust</string>
    <string name="style_of_pizza_dough">Style of pizza/dough:</string>
    <string name="select_size_of_pizza">Select Size of Pizza:</string>
    <string name="total_price">Total Price:</string>
    <string name="checkout">Checkout</string>
    <string name="pay">Pay</string>
    <string name="cardholder_s_last_name">Cardholder\'s last name</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cardholder_s_first_name">Cardholder\'s first name</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="debit_card">Debit card</string>
    <string name="place_your_order">Place your order!</string>
    <string name="familyRequired">Fullname is required!</string>
    <string name="streetRequired">Street number is required!</string>
    <string name="cityRequired">City is required!</string>
    <string name="postalCodeRequired">Postal code is required!</string>
    <string name="phoneNumberRequired">Phone number is required!</string>
    <string name="customer_s_information">Customer Information</string>
    <string name="fullname">Fullname</string>
    <string name="street_number">Street Number</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="complete_process">Complete Process</string>
    <string name="your_pizza_order_successfully_completed">Your Pizza order successfully completed</string>
    <string name="your_order_list">Your Order List:</string>
    <string name="return_to_home">Return To Home</string>

    <string-array name="pizza_size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-Large</item>
    </string-array>

</resources>