<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/centen_black"
    tools:context=".Ac_CustomerInformation">

    <TextView
        android:id="@+id/header"
        android:layout_width="@dimen/layout_w276"
        android:layout_height="@dimen/layout_h52"
        android:text="@string/customer_s_information"
        android:textSize="@dimen/text_size25"
        android:textColor="@color/centennial_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h45"
        android:ems="12"
        android:layout_marginTop="@dimen/margin_t5"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/streetNumber"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h45"
        android:layout_marginTop="@dimen/margin_t12"
        android:ems="12"
        android:hint="@string/street_number"
        android:inputType="number"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="12"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streetNumber" />

    <EditText
        android:id="@+id/postalCode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h45"
        android:layout_marginTop="@dimen/margin_t16"
        android:ems="12"
        android:hint="@string/postal_code"
        android:inputType="textPostalAddress"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h45"
        android:layout_marginTop="@dimen/margin_t16"
        android:ems="12"
        android:hint="@string/phone_number"
        android:background="@color/white"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postalCode" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h45"
        android:layout_marginTop="@dimen/margin_t16"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_t12"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:onClick="onConfirmClick"
        android:text="@string/complete_process"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>