<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/centen_black"
    tools:context=".Ac_Payment">

    <Button
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_t5"
        android:layout_marginRight="@dimen/margin_20"
        android:onClick="raise_event"
        android:text="@string/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCard" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h35"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/cardholder_s_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/cardNum"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h35"
        android:layout_marginTop="@dimen/margin_t16"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h35"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/expiration_date"
        android:maxLength="5"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNum" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_h35"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/cardholder_s_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentOptions" />

    <ImageView
        android:id="@+id/imgCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_t5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/cards" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/paymentOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@color/centennial_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payHeader">

        <RadioButton
            android:id="@+id/cach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="raise_event"
            android:text="@string/cash"
            android:textColor="@color/centennial_color"
            android:textSize="@dimen/text_size25" />

        <RadioButton
            android:id="@+id/credit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="raise_event"
            android:text="@string/credit_card"
            android:textColor="@color/centennial_color"
            android:textSize="@dimen/text_size25" />

        <RadioButton
            android:id="@+id/debit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="raise_event"
            android:text="@string/debit_card"
            android:textColor="@color/centennial_color"
            android:textSize="@dimen/text_size25" />
    </RadioGroup>

    <TextView
        android:id="@+id/payHeader"
        android:layout_width="276dp"
        android:layout_height="52dp"
        android:text="@string/place_your_order"
        android:textColor="@color/centennial_color"
        android:textSize="@dimen/text_size_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>