<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/centen_black"
    tools:context=".Ac_ConfirmationPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_t5"
        android:textSize="@dimen/text_size20"
        android:textColor="@color/centennial_color"
        android:text="@string/your_pizza_order_successfully_completed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/text_size25"
        android:textColor="@color/centennial_color"
        android:text="@string/your_order_list" />
    <ListView
        android:id="@+id/lstPizza"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_h250"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/white"
        android:textAlignment="center">
    </ListView>

    <TextView
        android:id="@+id/txv_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/text_size20"
        android:textColor="@color/centennial_color" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:onClick="onReturnHomeClicked"
        android:text="@string/return_to_home" />

</LinearLayout>